# Axon

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_REPORT_PHASE8_9.md  README.md  SECURITY.md  bench_stderr.txt  bench_stdout.txt  cargo_check_log.txt  compile.ps1  run_tests.bat  run_tests.ps1  tasks.md  tasks_compliance.md  test_all.bat  test_run.bat
.github/workflows/: ci.yml  docs.yml  plan-quality.yml
benches/: compiler_bench.rs  criterion_bench.rs
benches/baselines/: matmul_c.c  matmul_numpy.py
benches/runtime/: collections.axon  matmul_cpu.axon  tensor_creation.axon
docs/: build_docs.py  docs.css  docs.js  documentation.html  index.html
docs/architecture/: textual-ir-rationale.md
docs/ci/: testing-strategy.md
docs/compliance/: README.md  final-review-phases-1-9.html  final-review-v3.html  fr-matrix.md  nfr-matrix.md  phase1-4-review-v2.html  phase1-4-review.html  phase5-7-review-v2.html  phase5-7-review.html  phase8-9-review-v2.html  phase8-9-review.html  (+1 more)
fuzz/: Cargo.toml  README.md
scripts/: install.ps1  install.sh
src/: ast.rs  borrow.rs  debugger.rs  doc.rs  error.rs  fmt.rs  interner.rs  lexer.rs  lib.rs  lint.rs  main.rs  mir.rs  parser.rs  repl.rs  shapes.rs  span.rs  symbol.rs  tast.rs  token.rs  typeck.rs  types.rs
stdlib/: convert.axon  device.axon  fmt.axon  io.axon  iter.axon  math.axon  mem.axon  ops.axon  option.axon  prelude.axon  random.axon  result.axon  string.axon  thread.axon  time.axon
tests/: ai_framework_tests.rs  codegen_tests.rs  e2e_tests.rs  fuzz_tests.rs  integration_tests.rs  snapshot_tests.rs  stdlib_tests.rs  tooling_tests.rs  type_tests.rs
(+229 files in other folders)
